--- a/index.html
+++ b/index.html
@@ -18,13 +18,37 @@
 	<body>
 
 		<div id="map"></div>
+		
 		<script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
 
 		<script>
+
+// ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------			
+			
+// Parameter, die beim Laden der Karte berücksichtigt werden.
+// Die Koordinaten beschreiben den Mittelpunkt des Kartenausschnitts.
+// Die Zahl am Ende der Zeile bestimmt die Vergrößerung des Kartenausschnitts (wenig Zoom 1-19 maximaler Zoom).
+
+// ------------------------>  TO-DO: Koordinaten ersetzen, Zoomstufe anpassen <------------------------
+
 		var map = L.map('map').setView([51.06124339207359, 7.028189312083531], 17);
-    
-		L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+
+
+// Hier wird die Karte eingebettet. (OpenStreetMap, MapBox, STAMEN usw.)
+// Keine Änderungen notwendig!
+
+		L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+				maxZoom: 19,
+				attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
 			}).addTo(map);
+
+
+// Jetzt wird ein Objekt auf der Karte definiert.
+// Bspw. bei einem Kreis wird der Mittelpunkt des Kreises durch die Koordinaten in der ersten Zeile beschrieben.
+// Zusätzlich können in den nächsten Zeilen Attribute editiert werden (Strichfarbe, Füllfarbe, Deckkraft der Füllfarbe, Radius der Fläche).
+// In der letzten Zeile kann eine Beschreibung für das Kartenobjekt eingetragen werden ('Beschreibungstext').
+
+// ------------------------> TO-DO: Koordinaten ersetzen, ggf. Radius anpassen <------------------------
     
 		var circle = L.circle([51.06124339207359, 7.028189312083531], {
 				color: 'red',
@@ -32,8 +56,10 @@
 				fillOpacity: 0.2,
 				radius: 200
 			}).addTo(map).bindPopup('Evakuierungsradius');  
-      	</script>
 
+// ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------		
+
+      		</script>
 	</body>
 </html>
 
