--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 // ------------------------> TO-DO: Koordinaten ersetzen, ggf. Radius anpassen <------------------------
     
 		var circle = L.circle([51.07654631268228, 6.99916007038576], {
-				color: 'red',
-				fillColor: 'red',
+				color: 'black',
+				fillColor: 'green',
 				fillOpacity: 0.2,
 				radius: 150
 			}).addTo(map).bindPopup('Evakuierungsradius');  
