--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
 		var circle = L.circle([51.07654631268228, 6.99916007038576], {
 				color: 'black',
-				fillColor: 'green',
+				fillColor: 'red',
 				fillOpacity: 0.2,
 				radius: 150
 			}).addTo(map).bindPopup('Evakuierungsradius');  
